--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <section id="about">
         <div class="container">
             <h2>THE GREAT MATHEMATICIAN</h2>
-            <img src="srinivasa.jpg" id="image.srinivas">
+            <img src="srinivasa.jpg" id="image.srinivas" height:100%,width:100%>
+            
             <p>Srinivasa Ramanujan Aiyangar he was born on (22 December 1887 – 26 April 1920) was an Indian mathematician. Often regarded as one of the greatest mathematicians of all time, though he had almost no formal training in pure mathematics, he made substantial contributions to mathematical analysis, number theory, infinite series, and continued fractions, including solutions to mathematical problems then considered unsolvable.
 
                 Ramanujan initially developed his own mathematical research in isolation. According to Hans Eysenck, "he tried to interest the leading professional mathematicians in his work, but failed for the most part. What he had to show them was too novel, too unfamiliar, and additionally presented in unusual ways; they could not be bothered". Seeking mathematicians who could better understand his work, in 1913 he began a mail correspondence with the English mathematician G. H. Hardy at the University of Cambridge, England. Recognising Ramanujan's work as extraordinary, Hardy arranged for him to travel to Cambridge. In his notes, Hardy commented that Ramanujan had produced groundbreaking new theorems, including some that "defeated me completely; I had never seen anything in the least like them before", and some recently proven but highly advanced results.</p>
@@ -172,7 +173,7 @@
     </section>
     <section id="poster">
         <h2>OUR POSTER</h2>
-        <img src="Screenshot 2024-12-31 100303.png" id="poster">
+        <img src="Screenshot 2024-12-31 155108.png" id="poster">
         <h3>TEAM MEMBERS</h3>
         <p>PUNITH.D (PC-24)</p>
         <P>MANASA.M (EC-07)</P>
